<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/burgundy">


    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/white"
       />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_below="@+id/et_first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/white"
       />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_below="@+id/et_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/gender"
        android:textColorHint="@color/white"
         />




    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_gender"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/Find"
        android:onClick="onClick"/>

</RelativeLayout>