<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lavender"
    >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/restaurant_logo"
        android:padding="20dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_logo"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/iv_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/restaurant_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_toEndOf="@+id/iv_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:textStyle="bold"
        android:text="@string/restaurant_address" />

    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_address"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/book_table" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_address"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel" />


</RelativeLayout>